// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputHelperText component should render correctly with helper text 1`] = `
Array [
  ".helperText-0-2-1 {
  display: flex;
  font-size: 12px;
  margin-top: 4px;
  align-items: center;
  font-family: Roboto, Arial;
  font-weight: 400;
  line-height: 1.25;
  margin-bottom: 0;
  letter-spacing: 0.38px;
}
.helperText-0-2-1 > i {}
.helperText-d0-0-2-2 {
  color: #737373;
}
.helperText-d0-0-2-2 > i {}",
  <div>
    <p
      class="helperText-0-2-1 helperText-d0-0-2-2"
    >
      some helper text
    </p>
  </div>,
]
`;

exports[`InputHelperText component should render correctly with helper text and feedback error 1`] = `
Array [
  ".helperText-0-2-1 {
  display: flex;
  font-size: 12px;
  margin-top: 4px;
  align-items: center;
  font-family: Roboto, Arial;
  font-weight: 400;
  line-height: 1.25;
  margin-bottom: 0;
  letter-spacing: 0.38px;
}
.helperText-0-2-1 > i {}
.helperText-d0-0-2-2 {
  color: #e74627;
}
.helperText-d0-0-2-2 > i {
  margin-right: 4px;
}
.icon-0-2-3 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-4 {
  color: #e74627;
  font-size: 16px;
}",
  <div>
    <p
      class="helperText-0-2-1 helperText-d0-0-2-2"
    >
      <i
        aria-hidden="true"
        class=" icon-0-2-3 icon-d0-0-2-4 natds-icons natds-icons-outlined-action-cancel Icon-gaya"
        data-testid="icon-outlined-action-cancel"
        role="img"
      />
      some helper text
    </p>
  </div>,
]
`;

exports[`InputHelperText component should render correctly with helper text and feedback success 1`] = `
Array [
  ".helperText-0-2-1 {
  display: flex;
  font-size: 12px;
  margin-top: 4px;
  align-items: center;
  font-family: Roboto, Arial;
  font-weight: 400;
  line-height: 1.25;
  margin-bottom: 0;
  letter-spacing: 0.38px;
}
.helperText-0-2-1 > i {}
.helperText-d0-0-2-2 {
  color: #569a32;
}
.helperText-d0-0-2-2 > i {
  margin-right: 4px;
}
.icon-0-2-3 {
  font-family: natds-icons;
  user-select: none;
  pointer-events: none;
}
.icon-d0-0-2-4 {
  color: #569a32;
  font-size: 16px;
}",
  <div>
    <p
      class="helperText-0-2-1 helperText-d0-0-2-2"
    >
      <i
        aria-hidden="true"
        class=" icon-0-2-3 icon-d0-0-2-4 natds-icons natds-icons-outlined-action-check Icon-gaya"
        data-testid="icon-outlined-action-check"
        role="img"
      />
      some helper text
    </p>
  </div>,
]
`;
